--- a/index.html
+++ b/index.html
@@ -936,7 +936,7 @@
 
           <div style="font-size: 30px; text-align: left; margin-left: 15px;">
             <ul>
-              <li>Uniq store (isomorphisme is easier)</li>
+              <li>Uniq store (isomorphism is easier)</li>
               <li>the State of the store is read-only</li>
               <li>We dispatch <b>actions</b> to update the state (of the store)</li>
               <li class="fragment"><b>Actions</b> are sent to the <b>reducers</b></li>
