update revealjs to 3.8.0

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="reveal/css/theme/black.css" />
 
     <!-- Theme used for syntax highlighting of code -->
-    <link rel="stylesheet" href="reveal/lib/css/zenburn.css" />
+    <link rel="stylesheet" href="reveal/lib/css/monokai.css" />
 
     <!-- Printing and PDF exports -->
     <script>
@@ -1563,10 +1563,10 @@
         <section>
           <h3>Reconciliation</h3>
           <p>
-            <b>Virtual DOM</b> is...
+            Le <b>Virtual DOM</b> est...
             <span class="fragment" style="font-size: 24px">
-              Une représentation mémoire des composants. Quand le rendu d'un composant est fait à nouveau, the nouveau V-DOM est comparé à
-              l'ancien V-DOM. Si il y a une différence, le DOM du browser is (partiellement) mis à jour.
+              Une représentation mémoire des composants. Quand le rendu d'un composant est fait à nouveau, le nouveau V-DOM est comparé à
+              l'ancien V-DOM. Si il y a une différence, le DOM du browser est (partiellement) mis à jour.
             </span>
           </p>
         </section>
@@ -1640,7 +1640,6 @@
       </div>
     </div>
 
-    <script src="reveal/lib/js/head.min.js"></script>
     <script src="reveal/js/reveal.js"></script>
 
     <script>
