update lib versions react 16.10.2

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <section>
           <h3>Versions</h3>
           <pre><code data-trim>
-                    "react": "16.9.0"
+                    "react": "16.10.2"
                 </code></pre>
         </section>
         <section>
@@ -112,7 +112,7 @@
         </section>
         <section>
           <h3><span style="text-decoration: line-through">var</span>, let, const</h3>
-          <pre><code data-trim>
+          <pre><code data-trim contenteditable>
                 let foo = 'bar'
                 const MAX = 10
                 const ttc = addTva(15)
