--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     <link rel="stylesheet" href="reveal/css/reveal.css" />
-    <link rel="stylesheet" href="reveal/css/theme/black.css" />
+    <link rel="stylesheet" href="reveal/css/theme/white.css" />
 
     <!-- Theme used for syntax highlighting of code -->
     <link rel="stylesheet" href="reveal/lib/css/zenburn.css" />
@@ -67,21 +67,7 @@
           </h1>
           <h3>#ES6</h3>
           <p style="text-align: center"><a target="_blank" href="http://twitter.com/jbcazaux">@jbcazaux</a></p>
-          <p style="text-align: center">
-            <a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a>
-          </p>
-        </section>
-        <section><img data-src="images/mynameis.jpg" alt="my name is" /></section>
-        <section><img data-src="images/coffee.gif" alt="coffee break" /></section>
-        <section>
-          <h3>Goals</h3>
-          <img data-src="images/postits.jpg" alt="goals" />
-        </section>
-        <section>
-          <h3>Versions</h3>
-          <pre><code data-trim>
-                    "react": "16.11.0"
-                </code></pre>
+            <p style="text-align: center"><a target="_blank" href="mailto:formation@oxiane.com">formation@oxiane.com</a></p>
         </section>
         <section>
           <h3>Content</h3>
@@ -117,9 +103,9 @@
                 const MAX = 10
                 const ttc = addTva(15)
                 </code></pre>
-          <p class="fragment">
+          <p class="">
             <span style="color: #8cd0d3">let</span> vs. <span style="color: #cc9393">const</span> ?
-            <span class="fragment">0 var, 44 let, 997 const</span>
+            <span class="">0 var, 44 let, 997 const</span>
           </p>
         </section>
         <section>
@@ -132,12 +118,12 @@
                 }
                 console.log(i, j)
                 </code></pre>
-          <pre class="fragment fade-up"><code data-trim>
+          <pre class=""><code data-trim>
                 const user = {}
                 user.name = 'john' // (1)
                 user = {name: 'lea'} // (2)
                 </code></pre>
-          <pre class="fragment fade-up"><code data-trim>
+          <pre class=""><code data-trim>
                 const arr = ['a']
                 arr.push('b') // (3)
                 arr = ['a', 'b'] // (4)
@@ -150,12 +136,12 @@
                     return a + b
                 }
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
                 let add = (a, b) => {
                     return a + b
                 }
                 </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
                 add = (a, b) => a + b
                 </code></pre>
         </section>
@@ -179,10 +165,6 @@
           </ul>
         </section>
         <section>
-          <h3>Immutabilité !</h3>
-          <p>Ne mutez pas pendant la formation, s'il vous plaît.</p>
-        </section>
-        <section>
             <h3>Spread operator</h3>
             <pre><code data-trim>
               let user = {
@@ -198,32 +180,7 @@
         </section>
         <section>
           <h3>Spread operator</h3>
-          <pre class="fragment current-visible"><code data-trim>
-                const odd = [1, 3, 5, 7, 9]
-                const even = [2, 4, 6, 8]
-                const all = [0]
-
-                // arr.push([element1[, ...[, elementN]]])
-                all.push(odd)
-                all.push(even)
-
-                console.log(all) // ?
-                </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
-                const odd = [1, 3, 5, 7, 9]
-                const even = [2, 4, 6, 8]
-                const all = [0]
-
-                // arr.push([element1[, ...[, elementN]]])
-                for (let i = 0; i < odd.length; i++) {
-                    all.push(odd[i])
-                }
-                for (let i = 0; i < even.length; i++) {
-                    all.push(even[i])
-                }
-                console.log(all) // ?
-                </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
+          <pre class="current-visible"><code data-trim>
                 const odd = [1, 3, 5, 7, 9]
                 const even = [2, 4, 6, 8]
                 const all = [0, ...odd, ...even]
@@ -252,12 +209,7 @@
             }
             console.log(getUserName(user))
             </code></pre>
-          <pre class="fragment"><code data-trim>
-            function getUserName({firstname, lastname}) {
-                return `${firstname} ${lastname}`)
-            }
-            </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
             const getUserName = ({firstname, lastname}) =>
                 `${user.firstname} ${user.lastname}`
             </code></pre>
@@ -274,11 +226,8 @@
                 }
             }
 
-            function getUserAddress(user) {
-             return `${user.address.num} ${user.address.street}`
-            }
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
             const getUserAddress = ({address: {num, street}}) =>
                 `${num} ${street}`
             </code></pre>
@@ -319,7 +268,7 @@
                     bar: bar
                 }
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
                 const shorter = {
                     foo,
                     bar
@@ -335,7 +284,7 @@
                 .then(ids => {/* use the ids */})
                 .catch(error => console.log(error.toString()))
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
             async function fetchItems {
                 try {
                     const response = await axios.get('/users/42/items')
@@ -378,14 +327,14 @@
             }
             add(2)(3) // ???
           </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
                 const add2 = add(2)
                 add2(3) // = ?
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
                 let add = x => y => x + y // WTF ?!
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
                 let add = x =>
                     y => (x + y)
                 //easy !
@@ -423,7 +372,7 @@
 
             export default Hello
             </code></pre>
-          <pre class="fragment">index.js<code class="jsx" data-trim>
+          <pre class="">index.js<code class="jsx" data-trim>
             import React from "react"
             import ReactDOM from "react-dom"
             import Hello from "./Hello"
@@ -677,7 +626,7 @@
                 return &lt;div onClick={handleClick}&gt;Click me !&lt;/div&gt;
             }
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
             const ClickableApp = () => (
               &lt;div
                 onClick={e => console.log('click !', e)}&gt;
@@ -766,7 +715,7 @@
         </section>
         <section>
           <h3>Tips and tricks</h3>
-          <h4 class="fragment">(Workarounds)</h4>
+          <h4 class="">(Workarounds)</h4>
         </section>
         <section>
           <h3>Fragments</h3>
@@ -780,7 +729,7 @@
                 )
             }
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
             render() {
                 return (
                 &lt;&gt;
@@ -914,7 +863,7 @@
                 const userId = window.current_account.id
             </code></pre>
           <p>&laquo;Why use redux if we have global variables ?&raquo;</p>
-          <p class="fragment">#TROLL</p>
+          <p class="">#TROLL</p>
         </section>
         <section>
           <h3>Redux</h3>
@@ -924,10 +873,10 @@
               <li>Store unique (plus simple pour l'isomorphisme / SSR)</li>
               <li>Le <b>state</b> du store est read-only</li>
               <li>On dispatch des <b>actions</b> pour mettre à jour le state (du store)</li>
-              <li class="fragment">Les <b>actions</b> sont envoyées aux <b>reducers</b></li>
-              <li class="fragment">Les <b>reducers</b> sont des fonctions <b>pures</b></li>
-              <li class="fragment">Les <b>Reducers</b> prennent un état et une action en paramètre</li>
-              <li class="fragment">et retournent un nouvel état dans un objet 'immutable'</li>
+              <li class="">Les <b>actions</b> sont envoyées aux <b>reducers</b></li>
+              <li class="">Les <b>reducers</b> sont des fonctions <b>pures</b></li>
+              <li class="">Les <b>Reducers</b> prennent un état et une action en paramètre</li>
+              <li class="">et retournent un nouvel état dans un objet 'immutable'</li>
             </ul>
           </div>
           <img data-src="images/redux.png" alt="redux" height="200" />
@@ -1133,7 +1082,7 @@
           <h3>Jusque là</h3>
           <ul>
             <li>Redux permet de ne dispatcher que des objets (les actions)</li>
-            <li class="fragment">
+            <li class="">
               <b>redux-thunk</b>, <b>redux-saga</b>, <b>mobx</b> permettent de dispacher des fonctions, et donc des actions asynchrones ou des actions
               avec des conditions. Ces librairies sont des <i>middlewares</i>.
             </li>
@@ -1189,13 +1138,13 @@
                     .then(resp => resp.data)
                     .catch(error => console.log(error.toString()))
             </code></pre>
-          <pre class="fragment"><code data-trim>
+          <pre class=""><code data-trim>
             export const fetchItems = () =>
               (dispatch, getState) => getItems(getState().userId)
               .then(items => dispatch({type: 'SET_ITEMS', items: items}))
             .catch((error) => console.log(error))
             </code></pre>
-            <pre class="fragment"><code data-trim>
+            <pre class=""><code data-trim>
             export const UserItems = () => {
               const dispatch = useDispatch()
 
@@ -1238,10 +1187,10 @@
           <h3>Context API</h3>
           <ul>
             <li>On peut passer des données aux composants enfant (partout dans la hiérarchie).</li>
-            <li class="fragment">
+            <li class="">
               Beaucoup de librairires sont basées la dessus. Ce n'était pas une API officielle avant Mars 2018.
             </li>
-            <li class="fragment"><i>react-redux</i> fonctionne grâce à ça, le store est passé à tous les composants.</li>
+            <li class=""><i>react-redux</i> fonctionne grâce à ça, le store est passé à tous les composants.</li>
           </ul>
         </section>
         <section>
@@ -1291,7 +1240,7 @@
           <h3>Jest, Enzyme, React Test Renderer, React Testing Library, ...</h3>
           <p>L'idées est de tester les <i>composants</i>, avec leurs états et leurs props.</p>
           <p>L'arrivée des hooks a fait bouger la hiérarchie des outils de test.</p>
-          <ul>
+          <ul style="font-size: 32px">
             <li>Enzyme: les Hooks ont mis un moment à être supportés (</li>
             <li>React test renderer: Pas de façon simple de tester les évènements </li>
             <li>React testing library: Des nouveaux paradigmes sur la façon de tester</li>
@@ -1525,12 +1474,8 @@
           </ul>
           <pre><code data-trim>
             const Admin = ({match}) => (
-                &lt;Link to={`${match.url}/users`}&gt;
-                    Users
-                &lt;/Link&gt;
-                &lt;Link to={`${match.url}/articles`}&gt;
-                    Articles
-                &lt;/Link&gt;
+                &lt;Link to={`${match.url}/users`}&gt;Users&lt;/Link&gt;
+                &lt;Link to={`${match.url}/articles`}&gt;Articles&lt;/Link&gt;
             )
             </code></pre>
         </section>
@@ -1558,7 +1503,7 @@
           <h3>Reconciliation</h3>
           <p>
             <b>Virtual DOM</b> is...
-            <span class="fragment" style="font-size: 24px">
+            <span class="" style="font-size: 24px">
               Une représentation mémoire des composants. Quand le rendu d'un composant est fait à nouveau, the nouveau V-DOM est comparé à
               l'ancien V-DOM. Si il y a une différence, le DOM du browser is (partiellement) mis à jour.
             </span>
@@ -1574,22 +1519,7 @@
         </section>
         <section>
           <h3>useCallback()</h3>
-          <pre class="fragment current-visible"><code data-trim>
-            const MyInput = () => {
-                const [value, setValue] = useState('')
-                &lt;input value={value}
-                    onChange={e => setValue(e.target.value)} /&gt;
-            }
-            </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
-            const MyInput = () => {
-                const [value, setValue] = useState('')
-                const handleInput = e => setValue(e.target.value)
-
-                &lt;input value={value} onChange={handleInput} /&gt;
-            }
-            </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
+          <pre class=""><code data-trim>
             const MyInput = () => {
                 const [value, setValue] = useState('')
                 const handleInput = useCallback(e =>
@@ -1604,32 +1534,30 @@
           <pre><code data-trim>
             const User = ({user}) =>  &lt;div&gt;{user.name}&lt;/div&gt;
           </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
+          <pre class=""><code data-trim>
             const MemoizedUser = ({user}) => {
                 return  useMemo(() => &lt;User user={user}&gt;, [user.id])
             }
            </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
+          <pre class=""><code data-trim>
             // inside a component
             const memoizedUser = useMemo(() => &lt;User user={user} /&gt;,
               [user.id])
             return {memoizedUser}
           </code></pre>
-          <pre class="fragment current-visible"><code data-trim>
+          <pre class=""><code data-trim>
             const MemoizedUser = React.memo(({ user }) =>
               &lt;User user={user} /&gt;)
           </code></pre>
         </section>
         <section data-background="#b5533c">
           <h3>TP-09</h3>
-          <h4>Optimisation</h4>
+          <h4>Optimisations</h4>
           <p>Essayer les différentes façons de faire de la memoization avec memo, useMemo and useCallback</p>
         </section>
         <section>
           <h3>Let's do it !</h3>
-
-          <h3>help ? <a href="mailto:jbcazaux@gmail.com">jbcazaux@gmail.com</a></h3>
-          <h3><a href="http://codox.fr/formation-reactjs-es6">http://codox.fr/formation-reactjs-es6</a></h3>
+            <h3>help ? <a href="mailto:formation@oxiane.com">formation@oxiane.com</a></h3>
         </section>
       </div>
     </div>
