--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
         </section>
         <section>
           <h3>Hello world</h3>
-          <pre>hello.js<code data-trim>
+          <pre>Hello.js<code data-trim>
             import React from "react"
 
             const Hello = (props) => <div>Hello {props.name} !</div>
@@ -490,7 +490,7 @@
 
                 return &lt;div onClick={() =&gt; count = count + 1}&gt;
                     Count: {count}
-                &lt;/div&gt;;
+                &lt;/div&gt;
             }
             </code></pre>
           <mark>Don't try this at home !</mark>
